2006-07-06  John Peacock <jpeacock@cpan.org>

	Ready to release to CPAN (now that SVN-Notify-Config is fixed).

2006-06-30  John Peacock <jpeacock@cpan.org>

	This should be working but is having some problems

2006-06-29  John Peacock <jpeacock@cpan.org>

	Quick release to cope with backwards incompatible API changes in
	SVN::Notify 2.61.  Don't release until POD is rewritten and I hear from
	Audrey Tang about SVN::Notify::Config fixes (to add to README).

2006-02-24  John Peacock <jpeacock@cpan.org>

	* Build.PL
	    Depend on the newly minted SVN::Notify-2.53.

	* lib/SVN/Notify/Mirror.pm
	    Use SVN::Notify->find_exe() to locate the 'svn' binary.

2006-02-24  John Peacock <jpeacock@cpan.org>

	Further improvements in making sure that the svn_binary is found.

2006-02-17  John Peacock <jpeacock@cpan.org>

	* Build.PL
	    Add explicit dependency on SVN::Notify. Duh.

	* README
	  lib/SVN/Notify/Mirror.pm
	    Improve documentation of optional features.

2006-02-17  John Peacock <jpeacock@cpan.org>

	Don't hardcode path to svn executable.

2006-02-16  John Peacock <jpeacock@cpan.org>

	Older Subversion clients choke if you give them the repos path when they
	weren't expecting it (go figure).

2006-01-03  John Peacock <jpeacock@cpan.org>

	Release 0.03 to CPAN.

	* README
	    Clarify a few points.

	* lib/SVN/Notify/Mirror.pm
	    Bump the $VERSION.

2005-12-29  John Peacock <jpeacock@cpan.org>

	One last file to add.

	* lib/SVN/Notify/Mirror/Rsync.pm
	    Forgot to add this back to the repository in its current form.

2005-12-29  John Peacock <jpeacock@cpan.org>

	Nearly forgot to add files to the MANIFEST.

	* MANIFEST
	    Add Rsync.pm and tests for same.

2005-12-29  John Peacock <jpeacock@cpan.org>

	* Build.PL
	    Add support structure for Rsync class.

	* README
	    Simplify and discuss features that have changed.

	* lib/SVN/Notify/Mirror.pm
	    Update $VERSION.  Add POD describing tag-regex option.

	* t/coretests.pm