@@ -1,17 +1,18 @@
-MANIFEST
-LICENSE
-README
-Todo
+Build.PL
 Changes
 lib/SVN/Notify/Mirror.pm
-lib/SVN/Notify/Mirror/SSH.pm
 lib/SVN/Notify/Mirror/Rsync.pm
-Build.PL
+lib/SVN/Notify/Mirror/SSH.pm
+LICENSE
 Makefile.PL
+MANIFEST
+MANIFEST.SKIP
 META.yml
+README
 t/001_basic.t
 t/002_config.t.PL
 t/003_sshtest.t.PL
 t/004_rsynctest.t.PL
 t/coretests.pm
 t/test-repos.dump
+Todo
