@@ -1,0 +1,12 @@
+\~$
+.gz$
+.bak$
+.diff$
+.patch$
+.lwpcookies
+.releaserc
+_build
+^Build$
+^Makefile$
+t/recreate
+t/survey_repos
